--- a/Project5/finalproject/artists/templates/artists/detail.html
+++ b/Project5/finalproject/artists/templates/artists/detail.html
@@ -2,11 +2,11 @@
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-<form action="{% url 'artists:editArtwork' artwork.art_id %}" method="post">
+<form action="{% url 'artists:editartwork' artwork.art_id %}" method="post">
 {% csrf_token %}
 {% for art in artwork.art_set.all %}
     <input type="radio" name="art" id="art{{ forloop.counter }}" value="{{ art.art_id }}">
     <label for="art{{ forloop.counter }}">{{ art.art_title }}</label><br>
 {% endfor %}
-<input type="submit" value="editArtwork">
+<input type="submit" value="editartwork">
 </form>
