Fixed add artwork function and added nav bar across site

--- a/Project5/finalproject/artists/templates/artists/customer_register.html
+++ b/Project5/finalproject/artists/templates/artists/customer_register.html
@@ -6,6 +6,13 @@
         </head>
 
         <body>
+          <!-- NAVIGATION BAR-->
+          <ul>
+            <li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
+            <li class="horizontal_nav"><a href="{% url 'artists:gallery' %}">Gallery</a></li>
+            <li class="horizontal_nav"><a href="{% url 'artists:add_artwork' %}">Add Artwork</a></li>
+            <li class="horizontal_nav"><a href="#about">About</a></li>
+          </ul>
 
                 <h1>Customer Sign-up</h1>
                 <form form method="post">
