--- a/Project5/finalproject/artists/templates/artists/index.html
+++ b/Project5/finalproject/artists/templates/artists/index.html
@@ -7,7 +7,7 @@
 
 
 <body>
-
+  <!-- NAVIGATION BAR-->
   <ul>
     <li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
     <li class="horizontal_nav"><a href="{% url 'artists:gallery' %}">Gallery</a></li>
