--- a/Project5/finalproject/artists/templates/artists/add_artwork.html
+++ b/Project5/finalproject/artists/templates/artists/add_artwork.html
@@ -6,9 +6,16 @@
         </head>
 
         <body>
+          <!-- NAVIGATION BAR-->
+          <ul>
+            <li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
+            <li class="horizontal_nav"><a href="{% url 'artists:gallery' %}">Gallery</a></li>
+            <li class="horizontal_nav"><a href="{% url 'artists:add_artwork' %}">Add Artwork</a></li>
+            <li class="horizontal_nav"><a href="#about">About</a></li>
+          </ul>
                 <h1>Add Artwork</h1>
 
-                <form action="{% url 'artists:gallery' %}" method = "POST">
+                <form action="{% url 'artists:add_artwork' %}" method = "POST">
                 {% csrf_token %}
                 Art Title:<br><input type="text" name="art_title"/><br><br>
                 Price:<br><input type="number" name="price" min="1" max="1000000"/><br>
