--- a/Project5/finalproject/artists/templates/artists/index.html
+++ b/Project5/finalproject/artists/templates/artists/index.html
@@ -4,46 +4,30 @@
 <title>Login Form Design</title>
   <!-- <link rel="stylesheet" type="text/css" href="artists.style.css">
 -->
-
+</head>
 
 <body>
-  <!-- NAVIGATION BAR-->
-  <ul>
-    <li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
-    <li class="horizontal_nav"><a href="{% url 'artists:gallery' %}">Gallery</a></li>
-    <li class="horizontal_nav"><a href="{% url 'artists:add_artwork' %}">Add Artwork</a></li>
-    <li class="horizontal_nav"><a href="#about">About</a></li>
-  </ul>
+        <!-- NAVIGATION BAR-->
+        <ul>
+        <li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
+        <li class="horizontal_nav"><a href="{% url 'artists:gallery' %}">Gallery</a></li>
+        <li class="horizontal_nav"><a href="{% url 'artists:add_artwork' %}">Add Artwork</a></li>
+        <li class="horizontal_nav"><a href="#about">About</a></li>
+        </ul>
 
 
-  <div class="loginbox">
-    <!-- <img src="avatar.jpg" class="avatar"> -->
-      <h1>Customer Login Here</h1>
-      <form>
-        <p>Username</p>
-        <input type="text" name="" placeholder="Enter username">
-        <p>Password</p>
-        <input type="password" name="" placeholder="Enter Password">
-        <input type="submit" name="" value="Login">
-        <a href="#">Lost your password?</a><br>
-        <a href="{% url 'artists:customer_register' %}">Don't have an account?</a>
-      </form>
-  </div>
-  <div class="loginbox1">
-    <!-- <img src="avatar.jpg" class="avatar"> -->
-      <h1>Artist Login Here</h1>
-      <form>
-        <p>Username</p>
-        <input type="text" name="" placeholder="Enter username">
-        <p>Password</p>
-        <input type="password" name="" placeholder="Enter Password">
-        <input type="submit" name="" value="Login">
-        <a href="#">Lost your password?</a><br>
+
+        <a href="{% url 'artists:customer_login' %}">Customer Login</a><br>
+        <a href="{% url 'artists:customer_register' %}">Don't have a customer account?</a><br><br><br><br>
+
+
+        <a href="{% url 'artists:artist_login' %}">Artist Login</a><br>
         <a href="{% url 'artists:artist_register' %}">Don't have an account?</a>
-      </form>
-  </div>
+
+
+
 
 
 </body>
-</head>
+
 </html>
