Updated formatting in gallery

--- a/Project5/finalproject/artists/templates/artists/gallery.html
+++ b/Project5/finalproject/artists/templates/artists/gallery.html
@@ -9,9 +9,9 @@
 <ul>
         {% for Artwork in all_artwork %}
                 <img src="{{ Artwork.image.url }}" height="250" width="250"> <br>
-                {{ Artwork.art_title }} <br>
-                {{ Artwork.id }} <br>
-                {{ Artwork.artist_id.first_name }} {{ Artwork.artist_id.last_name }} <br>
-                ${{ Artwork.price }} <br> <br> <br> <br>
+                <b>Artwork Title:</b> "{{ Artwork.art_title }}" <br>
+                <b>Artwork ID:</b> {{ Artwork.id }} <br>
+                <b>Artist:</b> {{ Artwork.artist_id.first_name }} {{ Artwork.artist_id.last_name }} <br>
+                <b>Price:</b> ${{ Artwork.price }} <br> <br> <br> <br>
         {% endfor %}
 </ul
