--- a/Project5/finalproject/artists/templates/artists/add_artwork.html
+++ b/Project5/finalproject/artists/templates/artists/add_artwork.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
         <head>
-                <meta charset="utf-8">
-                <title>Add Artwork</title>
+          <title>Athens Art Gallery</title>
+          {% load static %}
+          <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta http-equiv="X-UA-Compatible" content="ie=edge">
+            <!-- Font Awesome -->
+            <link rel="stylesheet" href="{% static 'css/all.css' %}">
+            <!-- Bootstrap -->
+            <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+            <!-- Custom -->
+            <link rel="stylesheet" href="{% static 'css/style.css' %}">
+            <!-- Lightbox -->
+            <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
         </head>
 
         <body>
@@ -13,8 +24,11 @@
             <li class="horizontal_nav"><a href="{% url 'artists:add_artwork' %}">Add Artwork</a></li>
             <li class="horizontal_nav"><a href="#about">About</a></li>
           </ul>
+          <br>
+          <br>
+          <br>
                 <h1>Add Artwork</h1>
-
+                <div style="text-align:center">
                 <form action="{% url 'artists:add_artwork' %}" method = "POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 Art Title:<br><input type="text" name="art_title"/><br><br>
@@ -25,8 +39,8 @@
                 <br>
                 <input type="submit" value="Add Artwork"/>
                 </form>
+              </div>
 
 
         </body>
 </html>
-
