--- a/Project5/finalproject/artists/templates/artists/index.html
+++ b/Project5/finalproject/artists/templates/artists/index.html
@@ -23,7 +23,7 @@
         <li class="horizontal_nav"><a href="{% url 'artists:gallery' %}">Gallery</a></li>
         <li class="horizontal_nav"><a href="{% url 'artists:add_artwork' %}">Add Artwork</a></li>
         <li class="horizontal_nav"><a href="{% url 'artists:about' %}">About</a></li>
-        <li class="horizontal_nav"><a href="{% url 'artists:artist_display' %}">About</a></li>
+        <li class="horizontal_nav"><a href="{% url 'artists:artist_display' %}">Artist Dashboard</a></li>
         </ul>
 
         {% if user.is_authenticated %}
