--- a/Project5/finalproject/artists/templates/artists/artist_display.html
+++ b/Project5/finalproject/artists/templates/artists/artist_display.html
@@ -1,12 +1,12 @@
 <!-- NAVIGATION BAR-->
 <ul>
-<li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
-<li class="horizontal_nav"><a href="{% url 'artists:gallery' %}">Gallery</a></li>
-<li class="horizontal_nav"><a href="{% url 'artists:add_artwork' %}">Add Artwork</a></li>
-<li class="horizontal_nav"><a href="{% url 'artists:about' %}">About</a></li>
+        <li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
+        <li class="horizontal_nav"><a href="{% url 'artists:gallery' %}">Gallery</a></li>
+        <li class="horizontal_nav"><a href="{% url 'artists:add_artwork' %}">Add Artwork</a></li>
+        <li class="horizontal_nav"><a href="{% url 'artists:about' %}">About</a></li>
+        <li class="horizontal_nav"><a href="{% url 'artists:artist_display' %}">Artist Dashboard</a></li>
 </ul>
 
-<ul>
         {{ user.username}} <br>
         {% for Artwork in all_artwork %}
                 {% if user.is_authenticated and user.first_name == Artwork.artist_id.first_name and user.last_name == Artwork.artist_id.last_name %}
