--- a/Project5/finalproject/artists/templates/artists/gallery.html
+++ b/Project5/finalproject/artists/templates/artists/gallery.html
@@ -13,10 +13,11 @@
   <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 <!-- NAVIGATION BAR-->
 <ul>
-  <li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
-  <li class="horizontal_nav"><a href="{% url 'artists:gallery' %}">Gallery</a></li>
-  <li class="horizontal_nav"><a href="{% url 'artists:add_artwork' %}">Add Artwork</a></li>
-  <li class="horizontal_nav"><a href="#about">About</a></li>
+<li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
+<li class="horizontal_nav"><a href="{% url 'artists:gallery' %}">Gallery</a></li>
+<li class="horizontal_nav"><a href="{% url 'artists:add_artwork' %}">Add Artwork</a></li>
+<li class="horizontal_nav"><a href="{% url 'artists:about' %}">About</a></li>
+<li class="horizontal_nav"><a href="{% url 'artists:artist_display' %}">Artist Dashboard</a></li>
 </ul>
 <br>
 <br>
