--- a/Project5/finalproject/artists/templates/artists/customer_login.html
+++ b/Project5/finalproject/artists/templates/artists/customer_login.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
         <head>
-                <meta charset="utf-8">
-                <title></title>
+          <title>Athens Art Gallery</title>
+          {% load static %}
+          <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta http-equiv="X-UA-Compatible" content="ie=edge">
+            <!-- Font Awesome -->
+            <link rel="stylesheet" href="{% static 'css/all.css' %}">
+            <!-- Bootstrap -->
+            <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+            <!-- Custom -->
+            <link rel="stylesheet" href="{% static 'css/style.css' %}">
+            <!-- Lightbox -->
+            <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
         </head>
-        <body>
+        <body style = "background: url('/static/img/artGallery.jpg')";>
         <ul>
         <li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
         <li class="horizontal_nav"><a href="{% url 'artists:gallery' %}">Gallery</a></li>
@@ -12,9 +23,11 @@
         <li class="horizontal_nav"><a href="{% url 'artists:about' %}">About</a></li>
         <li class="horizontal_nav"><a href="{% url 'artists:artist_display' %}">Artist Dashboard</a></li>
         </ul>
-
+        <br>
+                <br>
                 <h1>Customer Login</h1>
-
+                <div style="background-color: #FFF;width: 800; text-align:center;display: inline_block; margin: 0 auto;">
+                  <div>
                 <form action="{% url 'artists:customer_login' %}" method="POST">
                           {% csrf_token %}
                           <p>Username</p>
@@ -24,7 +37,8 @@
                           <input type="submit" name="" value="Login">
                           <a href="{% url 'artists:customer_register' %}">Don't have an account?</a>
                 </form>
-
+</div>
+</div>
 
         </body>
 </html>
