--- a/Project5/finalproject/artists/templates/artists/about.html
+++ b/Project5/finalproject/artists/templates/artists/about.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-        <head>
-                <meta charset="utf-8">
-                <title>About</title>
-        </head>
-        <body>
+<head>
+  <title>Athens Art Gallery</title>
+  {% load static %}
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <!-- Custom -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Lightbox -->
+    <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
+</head>
+        <body style = "background: url('/static/img/artGallery.jpg')";>
 
                 <ul>
                 <li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
@@ -13,9 +24,11 @@
                 <li class="horizontal_nav"><a href="{% url 'artists:about' %}">About</a></li>
                 </ul>
 
-
+                <br>
+                <br>
                 <h1>Contributors</h1>
-
+                <div style="background-color: #FFF;width: 800; text-align:center;display: inline_block; margin: 0 auto;">
+                  <div>
                 <h2>Dave Barry</h2><br>
                 <img src="/media/0.jpeg" height="150" width="150">
                 <br>
@@ -29,6 +42,8 @@
                 Mary Claire Hodge<br>
                 Ola<br>
                 Vishaka<br>
+              </div>
+            </div>
 
 
 
