--- a/Project5/finalproject/artists/templates/artists/artist_display.html
+++ b/Project5/finalproject/artists/templates/artists/artist_display.html
@@ -1,3 +1,20 @@
+<head>
+  <title>Athens Art Gallery</title>
+  {% load static %}
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <!-- Custom -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Lightbox -->
+    <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
+</head>
+<body style = "background: url('/static/img/artGallery.jpg')";>
+
 <!-- NAVIGATION BAR-->
 <ul>
         <li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
@@ -6,7 +23,10 @@
         <li class="horizontal_nav"><a href="{% url 'artists:about' %}">About</a></li>
         <li class="horizontal_nav"><a href="{% url 'artists:artist_display' %}">Artist Dashboard</a></li>
 </ul>
-
+<div style="background-color: #FFF;width: 800; text-align:center;display: inline_block; margin: 0 auto;">
+<div>
+  <br>
+  <br>
         {{ user.username}} <br>
         {% for Artwork in all_artwork %}
                 {% if user.is_authenticated and user.first_name == Artwork.artist_id.first_name and user.last_name == Artwork.artist_id.last_name %}
@@ -18,3 +38,6 @@
                 {% endif %}
         {% endfor %}
 </ul>
+</div>
+</div>
+</body>
