--- a/Project5/finalproject/artists/templates/artists/gallery.html
+++ b/Project5/finalproject/artists/templates/artists/gallery.html
@@ -27,12 +27,22 @@
 <div>
 <ul>
         {% for Artwork in all_artwork %}
-                <img src="{{ Artwork.image.url }}" height="250" width="250"> <br>
-                <b>Artwork Title:</b> "{{ Artwork.art_title }}" <br>
-                <b>Artist:</b> {{ Artwork.artist_id.first_name }} {{ Artwork.artist_id.last_name }} <br>
-                <b>Price:</b> ${{ Artwork.price }} <br> <br> <br> <br>
+                {% if Artwork.isAvailable %}
+                        <img src="{{ Artwork.image.url }}" height="250" width="250"> <br>
+                        {{ Artwork.art_title }} <br>
+                        {{ Artwork.artist_id.first_name }} {{ Artwork.artist_id.last_name }} <br>
+                        ${{ Artwork.price }} <br>
+
+                        <form action="{% url 'artists:order' %}" method = "POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+
+                        <input type="hidden" name="art_id" value= {{ Artwork.id }} />
+                        <input type="submit" value="Buy">
+                        </form>
+                {% endif %}
+                <br><br> <br> <br>
         {% endfor %}
-</ul>
+</ul
 </div>
 </div>
 </body>
