--- a/Project5/finalproject/artists/templates/artists/add_artwork.html
+++ b/Project5/finalproject/artists/templates/artists/add_artwork.html
@@ -22,7 +22,7 @@
             <li class="horizontal_nav"><a href="{% url 'artists:index' %}">Home</a></li>
             <li class="horizontal_nav"><a href="{% url 'artists:gallery' %}">Gallery</a></li>
             <li class="horizontal_nav"><a href="{% url 'artists:add_artwork' %}">Add Artwork</a></li>
-            <li class="horizontal_nav"><a href="#about">About</a></li>
+            <li class="horizontal_nav"><a href="{% url 'artists:about' %}">About</a></li>
           </ul>
           <br>
           <br>
