Fixed issues with password fields in CSS

--- a/Project5/finalproject/artists/templates/artists/artist_register.html
+++ b/Project5/finalproject/artists/templates/artists/artist_register.html
@@ -26,8 +26,7 @@
                 </ul>
                 <br>
                 <br>
-                <br>
-                <div style="background-color: #FFF;width: 800; text-align:center;display: inline_block;padding: 30px">
+                <div style="width: 800; text-align:center;display: inline_block;padding: 30px">
                       <div>
 
                 <h1>Sign-up</h1>
@@ -38,7 +37,7 @@
                         Last Name:<br>
                         <input type="text" name="last_name"><br>
                         Password:<br>
-                        <input type="text" name="password"><br>
+                        <input type="password" name="password"><br>
                         Username:<br>
                         <input type="text" name="username"><br>
                         Email:<br>
