--- a/Project5/finalproject/artists/static/css/style.css
+++ b/Project5/finalproject/artists/static/css/style.css
@@ -134,12 +134,13 @@ h1{
 .loginbox1 input[type="text"],input[type="password"]
 {
   border: none;
-  border-bottom: 1px solid #fff;
-  background: transparent;
   outline: none;
-  height: 40px;
-  color: #fff;
-  font-size: 16px;
+  background: white;
+  height: 30px;
+  color: #000;
+  font-size: 18px;
+  border-radius: 5px;
+  width: 240px;
 }
 .loginbox1 input[type="submit"]
 {
